--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is a Blog Application",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "GDS K S",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -21,5 +21,13 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gagandua078/Blog.git"
+  },
+  "bugs": {
+    "url": "https://github.com/gagandua078/Blog/issues"
+  },
+  "homepage": "https://github.com/gagandua078/Blog#readme"
 }
